fix: change focused link color to white for improved visibility

--- a/css/style.css
+++ b/css/style.css
@@ -688,6 +688,7 @@ a:focus {
   width: 20px;
   height: auto;
   margin-right: 12px;
+  color: white;
 }
 
 /* footer section*/
